gcc/testsuite/gcc.target/aarch64/target_attr_17.c
__attribute__((target("invalid-attr-string")))
int
foo (int a)
{
  return a + 5;
}

/* { dg-error "attribute 'target\\(\"invalid-attr-string\"\\)' is not valid" "" { target *-*-* } 0 } */
